Bug 67947 - CSV Import dialog: encoding list not sorted
Summary: CSV Import dialog: encoding list not sorted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-09 11:08 UTC by Urmas
Modified: 2013-08-09 13:08 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2013-08-09 11:08:44 UTC
The encoding list in CSV text import is not sorted alphabetically so it is hard to find them in there.
Comment 1 Commit Notification 2013-08-09 11:33:40 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a783c7ce72c6dc306dcd39868c9bf41d9dc886e0

Resolves: fdo#67947 charsets not sorted in csv dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2013-08-09 11:37:36 UTC
fixed in master, proposed in gerrit for 4-1
Comment 3 Commit Notification 2013-08-09 13:08:38 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb991c189575fdd89b9f985ecbff3a200ffc5ea1&h=libreoffice-4-1

Resolves: fdo#67947 charsets not sorted in csv dialog


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.