Resolves: fdo#67947 charsets not sorted in csv dialog

regression since 538ba011d7b598737c898cfcce1e0d7b00b40c84

Change-Id: I260819681dfd47435d8edf5fd97c873238c5d808
(cherry picked from commit a783c7ce72c6dc306dcd39868c9bf41d9dc886e0)
Reviewed-on: https://gerrit.libreoffice.org/5326
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>